# SmartLampSE

./: .gitignore  README.md
board_test/: pwm.c  pwm.h
electronics_design/: #auto_saved_files#  SmartLampSE.kicad_pcb  SmartLampSE.kicad_pro  SmartLampSE.kicad_sch  ~SmartLampSE.kicad_pcb.lck
electronics_design/Custom_Library.pretty/: NetTie-2_THT_Custom_Pad1.0mm.kicad_mod
software/board_test/: APA102.c  HIH4000.c  adc.c  co2_i2c_test.c  co2_i2c_test.h  eeprom.c  eeprom_test.c  eeprom_test.h  i2c.c  i2c.h  iAQCore.c  light_spi_test.c  light_spi_test.h  main.c  pwm.c  pwm.h  pwm_test.c  pwm_test.h  spi.h  timing_test.c  timing_test.h  uart.h  uart_rx_test.c  uart_rx_test.h  uart_tx_test.c  uart_tx_test.h
software/board_test/nbproject/: configurations.xml  project.xml
software/cli_interface/: cli_interface.py
software/smart_lamp_se/: APA102.c  APA102.h  HIH4000.c  HIH4000.h  LM35.c  LM35.h  VEML7700.c  VEML7700.h  adc.c  adc.h  eeprom.c  eeprom.h  i2c.c  i2c.h  iAQ-Core.c  iAQ-Core.h  iAQCore.c  iAQCore.h  main.c  pwm.c  pwm.h  spi.c  spi.h  timing.c  timing.h  uart.c  uart.h  uart_injection.txt
software/web_interface/: Cargo.toml  requests.http
software/web_interface/assets/web/: dashboard.html  fan_config.html  light_config.html
software/web_interface/src/: main.rs
software/web_interface/src/api/: api_routes.rs  custom_extractors.rs  errors.rs  file_server.rs  mod.rs  response.rs
software/web_interface/src/model/: model.rs
system_model/: .project  SmartLampSE.notation  SmartLampSE.uml  SmartLampSE_en_US.properties
(+2 files in other folders)
