[package]
name = "web_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["ws"]}
axum-macros = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "macros"] }
serialport = "4.2"